Update 자바 모던 인 액션.md

--- a/bookStudy/자바 모던 인 액션.md
+++ b/bookStudy/자바 모던 인 액션.md
@@ -1,2 +1,30 @@
-## 혼자 공부한 개념정리<br>
-[1.HTML_01.tag](https://github.com/kha0213/Today-I-Learn/wiki/HTML_01.tag)<br>
+## Function 객체<br>
+1. Function
+자바 8에선 Function 객체를 이용하여 익명함수를 쉽게 구현할 수 있다. new 연산자에서 추상 메소드를 Override해서 쓸 수 있지만 람다를 사용하면 코드의 가독성이 좋아지고 깔끔하게 해결된다.<br>
+Function함수에서는 앞의 String이 받는 값 뒤의 Integer가 리턴 타입이다.
+<pre>
+// 일반적인 Function 함수
+Function<String,Integer> toInt = new Function<String, Integer>() {
+    @Override
+    public Integer apply(String value) {
+        return Integer.parseInt(value);
+    }
+};
+// 람다를 이용한 Function 함수
+final Function<String,Integer> toIntRamda = value -> Integer.parseInt(value);
+</pre>
+
+2. Consumer
+Function과 비슷하지만 리턴 타입이 void이면 Consumer 객체로 만들면 된다.
+<pre>
+final Consumer<String> printR = new Consumer<String>() {
+    @Override
+    public void accept(String value) {
+       System.out.println("printR:::"+value);
+    }
+};
+       
+
+final Consumer<String> printR2 = value -> System.out.println("printR2:::"+value);
+
+</pre>
