Update 자바 모던 인 액션.md

--- a/bookStudy/자바 모던 인 액션.md
+++ b/bookStudy/자바 모던 인 액션.md
@@ -38,9 +38,11 @@ final Consumer<String> printR2 = value -> System.out.println("printR2:::"+value)
         Predicate<Integer> isPositive = n -> n > 0;
         List<Integer> positiveNumbers = filter(numbers, isPositive);
 
-
         Predicate<Integer> lessThan3 = n -> n < 3;
         List<Integer> lessThan3Numbers = filter(numbers, lessThan3);
+        
+        // Predicate 부분을 바로 만들어 넘겨도 된다.
+        List<Integer> zeroNumber = filter(numbers, i -> i == 0);
     }
     
     // T로 모든 객체에 대응 할 수 있게 만들어보았다.
