Update 자바 모던 인 액션.md

--- a/bookStudy/자바 모던 인 액션.md
+++ b/bookStudy/자바 모던 인 액션.md
@@ -4,7 +4,7 @@
 > Functional Interface는 추상 메서드가 단 하나인 인터페이스를 말한다.   
 > 추상 메서드가 하나여야만 람다식 적용이 가능하다.   
 
-1. Function<T,R>
+#### 1. Function<T,R>
 자바 8에선 Function 객체를 이용하여 익명함수를 쉽게 구현할 수 있다.   
 new 연산자에서 추상 메소드를 Override해서 쓸 수 있지만 람다를 사용하면 코드의 가독성이 좋아지고 깔끔하게 해결된다.   
 Function<T,R> 객체에서는 T가 입력 값 R이 결과값(리턴 타입)이다.   
@@ -21,7 +21,7 @@ Function<String,Integer> toInt = new Function<String, Integer>() {
 final Function<String,Integer> toIntRamda = value -> Integer.parseInt(value);
 </pre>
 
-2. Consumer<T>
+#### 2. Consumer<T>
 Function과 비슷하지만 리턴 타입이 void이면 Consumer 객체로 만들면 된다.   
 <pre>
 final Consumer<String> printR = new Consumer<String>() {
@@ -35,7 +35,7 @@ final Consumer<String> printR = new Consumer<String>() {
 final Consumer<String> printR2 = value -> System.out.println("printR2:::"+value);
 </pre>
 
-3. Predicate<T>
+#### 3. Predicate<T>
 결과값(리턴 타입)이 항상 boolean인 Function을 말한다. 
 Function<T,Boolean>과도 같으나 boolean이 자주 사용되고 객체가 아닌 기본자료형을 사용 할 때 자주 쓰인다.   
 <pre>
@@ -64,7 +64,7 @@ Function<T,Boolean>과도 같으나 boolean이 자주 사용되고 객체가 아
     }    
 </pre>
 
-4. Supplier<T>
+#### 4. Supplier<T>
 리턴타입이 T인 Function을 말한다. 인자가 없는게 특징이다.   
 <pre>
 Supplier<String> supplier = () -> "supplier method!";
