--- a/bookStudy/자바 모던 인 액션.md
+++ b/bookStudy/자바 모던 인 액션.md
@@ -1,90 +1,1 @@
-## Functional Interface (함수형 인터페이스)<br>
-> Functional Interface란 '구현해야 할 추상 메서드가 하나만 정의된 인터페이스'를 가리킨다.   
-> java 8 이후로 Interface 에 default 메서드로 구현하지 않아도 되는 메서드가 존재한다.   
-> Functional Interface는 추상 메서드가 단 하나인 인터페이스를 말한다.   
-> 추상 메서드가 하나여야만 람다식 적용이 가능하다.   
-
-### 1. Function<T,R>
-자바 8에선 Function 객체를 이용하여 익명함수를 쉽게 구현할 수 있다.   
-new 연산자에서 추상 메소드를 Override해서 쓸 수 있지만 람다를 사용하면 코드의 가독성이 좋아지고 깔끔하게 해결된다.   
-Function<T,R> 객체에서는 T가 입력 값 R이 결과값(리턴 타입)이다.   
-<pre>
-// 일반적인 Function 함수
-Function<String,Integer> toInt = new Function<String, Integer>() {
-    @Override
-    public Integer apply(String value) {
-        return Integer.parseInt(value);
-    }
-};
-
-// 람다를 이용한 Function 함수
-final Function<String,Integer> toIntRamda = value -> Integer.parseInt(value);
-</pre>
-
-### 2. Consumer<T>
-Function과 비슷하지만 리턴 타입이 void이면 Consumer 객체로 만들면 된다.   
-<pre>
-final Consumer<String> printR = new Consumer<String>() {
-    @Override
-    public void accept(String value) {
-       System.out.println("printR:::"+value);
-    }
-};
-       
-// 람다
-final Consumer<String> printR2 = value -> System.out.println("printR2:::"+value);
-</pre>
-
-### 3. Predicate<T>
-결과값(리턴 타입)이 항상 boolean인 Function을 말한다. 
-Function<T,Boolean>과도 같으나 boolean이 자주 사용되고 객체가 아닌 기본자료형을 사용 할 때 자주 쓰인다.   
-<pre>
-    public static void main(String[] args) {
-        List<Integer> numbers = Arrays.asList(-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6);
-
-        Predicate<Integer> isPositive = n -> n > 0;
-        List<Integer> positiveNumbers = filter(numbers, isPositive);
-
-        Predicate<Integer> lessThan3 = n -> n < 3;
-        List<Integer> lessThan3Numbers = filter(numbers, lessThan3);
-        
-        // Predicate 부분을 바로 만들어 넘겨도 된다.
-        List<Integer> zeroNumber = filter(numbers, i -> i == 0);
-    }
-    
-    // T로 모든 객체에 대응 할 수 있게 만들어보았다.
-    private static <T> List<T> filter(List<T> list, Predicate<T> filter) {
-        List<T> result = new ArrayList<>();
-        for(T input : list) {
-            if(filter.test(input)) {
-                result.add(input);
-            }
-        }
-        return result;
-    }    
-</pre>
-
-### 4. Supplier<T>
-리턴타입이 T인 Function을 말한다. 인자가 없는게 특징이다.   
-<pre>
-Supplier<String> supplier = () -> "supplier method!";
-</pre>
-
-* * *
-## boxing and unboxing
-자바의 데이터 타입은 기본형(int, double, byte, char) 또는 참조형 (Integer, Double, Byte, Object, List...) 이 있다.   
-제네릭 파라미터 <T> 에서 T는 참조형 만 사용할 수 있다.   
-java에서 기본형을 참조형으로 변환하는 기능을 boxing 이라고 한다. (참조형을 기본형으로 변환은 unboxing)   
-자동으로 boxing과 unboxing이 이루어지는 것을 autoboxing 이라고 한다.  
-하지만 이런 변환은 비용이 소모되어 함수형 인터페이스는 여러 종류를 지원한다.
-
-ex) IntPredicate, LongSupplier...
-<pre>
-// autoboxing이 일어난다.
-Predicate<Integer> integerPredicate = a -> a > 0;
-// 기본형 변수로 일어나지 않는다.
-IntPredicate intPredicate = b -> b > 0;
-</pre>
-
-다음은 이런 함수형 인터페이스를 설명한다.
-![인터페이스 ](https://user-images.githubusercontent.com/56239469/104201429-1a0a8e80-546d-11eb-9581-e4c0552e131f.png)
+[1. Functional Interface](http://)
