Update 자바 모던 인 액션.md

--- a/bookStudy/자바 모던 인 액션.md
+++ b/bookStudy/자바 모던 인 액션.md
@@ -1,1 +1,1 @@
-[1. Functional Interface](http://)
+[1. Functional Interface](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/1.%20Functional%20Interface.md)
