--- a/bookStudy/자바 모던 인 액션/0. Intro.md
+++ b/bookStudy/자바 모던 인 액션/0. Intro.md
@@ -1,1 +1,3 @@
-[1. Functional Interface](http://)
+## [Modern Java in Action] 21.01.10 Start
+
+[1. Functional Interface](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/%EC%9E%90%EB%B0%94%20%EB%AA%A8%EB%8D%98%20%EC%9D%B8%20%EC%95%A1%EC%85%98/1.%20Functional%20Interface.md)
