--- a/bookStudy/Modern Java in Action/0. Intro.md
+++ b/bookStudy/Modern Java in Action/0. Intro.md
@@ -1,3 +1,3 @@
 ## [Modern Java in Action] 21.01.10 Start
 
-[1. Functional Interface](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/%EC%9E%90%EB%B0%94%20%EB%AA%A8%EB%8D%98%20%EC%9D%B8%20%EC%95%A1%EC%85%98/1.%20Functional%20Interface.md)
+[1. Functional Interface](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/Modern%20Java%20in%20Action/1.%20Functional%20Interface.md)
