--- a/bookStudy/Modern Java in Action/3. Stream.md
+++ b/bookStudy/Modern Java in Action/3. Stream.md
@@ -1,1 +1,20 @@
-## Stream
+## Stream (스트림)
+> Stream은 Java 1.8에 새로 추가된 기능으로 Stream을 이용하여 선언형 (데이터를 처리하는 임시 구현 코드 대신 질의로 표현) 으로 컬렉션 데이터를 처리 할 수 있다.
+> 기존에 Java에서 사용하기 힘들었던 병렬성을 쉽게 활용하여 프로그래밍 성능을 올릴 수 있다.
+> 메서드를 조립하는 형식으로 유연성이 좋아진다.
+> 선언형으로 간결하고 가독성이 좋아진다.
+
+* * *
+
+스트림은 크게 3가지 단계로 동작합니다. 컬렉션이나 배열 등으로부터 스트림을 생성하는 작업(Stream Source), 스트림을 필터링하거나 요소를 알맞게 변환하는 중간 연산(Intermediate Operations), 마지막으로 최종적인 결과를 도출하는 단말 연산(Terminal Operations)으로 나뉩니다.   
+(참조 : https://madplay.github.io/post/introduction-to-java-streams)[https://madplay.github.io/post/introduction-to-java-streams]
+
+### 1. Static Method Reference
+정적 메서드 참조이다. Function함수에 이미 String, Integer 로 input type과 return type에 대해 정의가 되어있기 때문에 바로 쓸 수 있다.   
+<pre>
+// Integer 클래스의 정적 메서드인 parseInt()를 메서드 레퍼런스로 전달했다. 
+Function<String, Integer> strToInt = (str) -> Integer.parseInt(str);
+Function<String, Integer> strToInt = Integer::parseInt;
+</pre>
+
+### 2. Instance Method Reference
