--- a/bookStudy/Modern Java in Action/0. Intro.md
+++ b/bookStudy/Modern Java in Action/0. Intro.md
@@ -2,3 +2,5 @@
 
 [1. Functional Interface](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/Modern%20Java%20in%20Action/1.%20Functional%20Interface.md)   
 [2. Method Reference](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/Modern%20Java%20in%20Action/2.%20Method%20Reference.md)   
+[3. Stream](https://github.com/kha0213/Today-I-Learn/blob/master/bookStudy/Modern%20Java%20in%20Action/3.%20Stream.md)   
+
