--- a/bookStudy/Modern Java in Action/3. Stream.md
+++ b/bookStudy/Modern Java in Action/3. Stream.md
@@ -7,7 +7,10 @@
 
 * * *
 <pre>
-스트림은 크게 3가지 단계로 동작합니다. 컬렉션이나 배열 등으로부터 스트림을 생성하는 작업(Stream Source), 스트림을 필터링하거나 요소를 알맞게 변환하는 중간 연산(Intermediate Operations), 마지막으로 최종적인 결과를 도출하는 단말 연산(Terminal Operations)으로 나뉩니다.
+스트림은 크게 3가지 단계로 동작합니다. 
+1. 컬렉션이나 배열 등으로부터 스트림을 생성하는 작업(Stream Source)
+2. 스트림을 필터링하거나 요소를 알맞게 변환하는 중간 연산(Intermediate Operations)
+3. 마지막으로 최종적인 결과를 도출하는 단말 연산(Terminal Operations)으로 나뉩니다.
 </pre>
 [MadPlay님 글 참조 : https://madplay.github.io/post/introduction-to-java-streams](https://madplay.github.io/post/introduction-to-java-streams)
 
